# anon-aadhaar-icp

./: .gitignore  package.json
anon-aadhaar-example/: package.json
anon-aadhaar-example/src/: utils.ts
anon-aadhaar-example/src/components/: ProofContainer.tsx  TestFiles.tsx
anon-aadhaar-example/src/declarations/backend/: backend.did  backend.did.d.ts  backend.did.js  index.js
anon-aadhaar-example/src/declarations/rust_backend_backend/: index.d.ts  index.js  rust_backend_backend.did.d.ts  rust_backend_backend.did.js
anon-aadhaar-example/src/pages/: _app.tsx  index.tsx
backend/: canister_ids.json  package-lock.json  package.json
backend/src/: constants.ts  index.ts
backend/src/zk/: curves.js  groth16_verify.js  utils.js
rust_backend/: Cargo.toml  README.md  canister_ids.json  dfx.json
rust_backend/src/rust_backend_backend/: Cargo.toml  rust_backend_backend.did
rust_backend/src/rust_backend_backend/src/: lib.rs  verify.txt
